# HackOn

./: .env.example  .gitignore  README.md  docker-compose.yml
.kiro/specs/flash-deal-eligibility-engine/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/rto-reallocation-engine/: .config.kiro  design.md  requirements.md  tasks.md
backend/: .eslintrc.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/src/: index.test.ts  index.ts
backend/src/config/: index.test.ts  index.ts
backend/src/demo/: autoSeed.ts  scenarios.ts  seed.ts  seedFlashDeals.ts  seedPassports.ts
backend/src/models/: Courier.ts  Customer.ts  DecisionRecord.ts  DeliveryAttempt.ts  EventStream.ts  EvidenceStore.ts  FlashDealEvaluation.ts  FlashDealSeedScenario.ts  HubEvent.ts  Order.ts  ProductPassport.ts  RTOEvent.ts  (+4 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
ml-service/: conftest.py  pyproject.toml  requirements.txt
ml-service/rto_ml_service.egg-info/: PKG-INFO  SOURCES.txt
ml-service/src/: __init__.py  app.py  config.py
ml-service/src/api/: __init__.py  circuit_breaker.py  routes.py  schemas.py
ml-service/src/ml/: __init__.py  root_cause_classifier.py  sale_recovery_predictor.py
ml-service/src/rto_ml_service.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ml-service/tests/: conftest.py  test_app_factory.py  test_circuit_breaker.py  test_classify_endpoint.py  test_config_properties.py  test_health.py  test_predict_recovery_endpoint.py  test_root_cause_classifier.py  test_sale_recovery_predictor.py
(+83 files in other folders)
