[project]
name = "rto-ml-service"
version = "1.0.0"
description = "AI-powered root cause classification and sale recovery prediction for RTO Reallocation Engine"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.108.0",
    "uvicorn==0.25.0",
    "scikit-learn==1.3.2",
    "openai==1.6.1",
    "hypothesis==6.92.1",
    "pydantic==2.5.3",
    "python-dotenv==1.0.0",
    "httpx==0.26.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.23.3",
    "numpy==1.26.2",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "property: property-based tests using Hypothesis",
    "unit: unit tests",
    "integration: integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hypothesis]
max_examples = 100
deadline = 5000
